# django_project

./: index.html  main.py  pyproject.toml  test.html
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_content.py  0003_blog_email.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  catalog_data.json  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: loaddata.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_remove_product_manufactured_at.py  0004_alter_category_description_alter_product_category_and_more.py  0004_alter_product_created_at_alter_product_updated_at.py  0005_alter_category_description_alter_product_description.py  0005_version.py  0006_alter_version_product.py  0007_product_owner.py  0008_alter_product_options.py  0009_product_is_published.py
catalog/templates/catalog/: base.html  basket.html  category_list.html  contacts.html  home.html  product_card.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  version_confirm_delete.html  version_detail.html  version_list.html
catalog/templatetags/: castom_tags.py
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_country_alter_user_number_tel.py  0003_user_token.py
users/templates/users/: login.html  user_form.html
